# ALPD-SciFlow

./: .gitignore  CMakeLists.txt  README.md  main.cpp  需求.md
common/: CMakeLists.txt  DataTable.cpp  DataTable.h  DataType.h  Exceptions.h  Logger.cpp  Logger.h  NodeData.cpp  NodeData.h  PortDefinition.h  Utility.cpp  Utility.h
core/: CMakeLists.txt  Connection.cpp  Connection.h  ExecutionEngine.cpp  ExecutionEngine.h  NodeBase.cpp  NodeBase.h  NodeFactory.cpp  NodeFactory.h  UndoCommands.cpp  UndoCommands.h  WorkflowGraph.cpp  WorkflowGraph.h
gui/: AnnotationListEditor.cpp  AnnotationListEditor.h  CMakeLists.txt  ConnectionGraphicsItem.cpp  ConnectionGraphicsItem.h  CurveEditor.cpp  CurveEditor.h  FloatingParamPanel.cpp  FloatingParamPanel.h  FlowchartStepEditor.cpp  FlowchartStepEditor.h  GradientEditor.cpp  GradientEditor.h  GridEditor.cpp  GridEditor.h  GuiPlaceholder.cpp  LegendListEditor.cpp  LegendListEditor.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  NodeGraphicsItem.cpp  NodeGraphicsItem.h  NodeGraphicsScene.cpp  NodeGraphicsScene.h  NodeGraphicsView.cpp  NodeGraphicsView.h  NodeToolbox.cpp  NodeToolbox.h  PortGraphicsItem.cpp  PortGraphicsItem.h  PreviewPanel.cpp  PreviewPanel.h  PropertyPanel.cpp  PropertyPanel.h  TableEditor.cpp  TableEditor.h
io/: CMakeLists.txt  DataIO.cpp  DataIO.h  ImageIO.cpp  ImageIO.h  WorkflowSerializer.cpp  WorkflowSerializer.h
nodes/: CMakeLists.txt  RegisterNodes.cpp  RegisterNodes.h
nodes/channel/: ChannelMerge.cpp  ChannelMerge.h  ChannelSplit.cpp  ChannelSplit.h  ConvertToGray.cpp  ConvertToGray.h  ConvertToHSV.cpp  ConvertToHSV.h  ConvertToLab.cpp  ConvertToLab.h  ConvertToYCrCb.cpp  ConvertToYCrCb.h  ExtractAlpha.cpp  ExtractAlpha.h  SetAlpha.cpp  SetAlpha.h
nodes/chart/: AreaChart.cpp  AreaChart.h  BarChart.cpp  BarChart.h  BoxPlot.cpp  BoxPlot.h  ChartHelper.h  DoughnutChart.cpp  DoughnutChart.h  Heatmap.cpp  Heatmap.h  Histogram.cpp  Histogram.h  HorizontalBarChart.cpp  HorizontalBarChart.h  LineChart.cpp  LineChart.h  PieChart.cpp  PieChart.h  RadarChart.cpp  RadarChart.h  ScatterPlot.cpp  ScatterPlot.h
nodes/color/: BrightnessContrast.cpp  BrightnessContrast.h  ColorBalance.cpp  ColorBalance.h  Curves.cpp  Curves.h  HueShift.cpp  HueShift.h  Invert.cpp  Invert.h  Levels.cpp  Levels.h  LightnessAdjust.cpp  LightnessAdjust.h  SaturationAdjust.cpp  SaturationAdjust.h  WhiteBalance.cpp  WhiteBalance.h
nodes/composite/: Blend.cpp  Blend.h  ImageGridStitch.cpp  ImageGridStitch.h  ImageStack.cpp  ImageStack.h  ImageWatermark.cpp  ImageWatermark.h  MaskBlend.cpp  MaskBlend.h  OpacityAdjust.cpp  OpacityAdjust.h  TextWatermark.cpp  TextWatermark.h
nodes/data_io/: CSVRead.cpp  CSVRead.h  DataExport.cpp  DataExport.h  ExcelRead.cpp  ExcelRead.h  JSONDataRead.cpp  JSONDataRead.h  ManualDataInput.cpp  ManualDataInput.h
nodes/data_proc/: ColumnCalculate.cpp  ColumnCalculate.h  DataAggregate.cpp  DataAggregate.h  DataFilter.cpp  DataFilter.h  DataNormalize.cpp  DataNormalize.h  DataPivot.cpp  DataPivot.h  DataProfile.cpp  DataProfile.h  DataSort.cpp  DataSort.h  HandleMissing.cpp  HandleMissing.h  RemoveDuplicates.cpp  RemoveDuplicates.h
nodes/drawing/: BlankCanvas.cpp  BlankCanvas.h  DrawArrow.cpp  DrawArrow.h  DrawCurve.cpp  DrawCurve.h  DrawDiamond.cpp  DrawDiamond.h  DrawEllipse.cpp  DrawEllipse.h  DrawParallelogram.cpp  DrawParallelogram.h  DrawPolyline.cpp  DrawPolyline.h  DrawRectangle.cpp  DrawRectangle.h  DrawRoundedRect.cpp  DrawRoundedRect.h  FlowchartAutoLayout.cpp  FlowchartAutoLayout.h  FlowchartElement.cpp  FlowchartElement.h  IconEmbed.cpp  IconEmbed.h
nodes/edge/: AdaptiveThreshold.cpp  AdaptiveThreshold.h  CannyEdge.cpp  CannyEdge.h  FindContours.cpp  FindContours.h  GlobalThreshold.cpp  GlobalThreshold.h  Laplacian.cpp  Laplacian.h  OtsuThreshold.cpp  OtsuThreshold.h  Sobel.cpp  Sobel.h
nodes/filter/: BilateralFilter.cpp  BilateralFilter.h  Clahe.cpp  Clahe.h  CustomKernel.cpp  CustomKernel.h  GaussianBlur.cpp  GaussianBlur.h  MedianFilter.cpp  MedianFilter.h  MotionBlur.cpp  MotionBlur.h  Sharpen.cpp  Sharpen.h
nodes/geometry/: AffineTransform.cpp  AffineTransform.h  Crop.cpp  Crop.h  Flip.cpp  Flip.h  PerspectiveTransform.cpp  PerspectiveTransform.h  Resize.cpp  Resize.h  Rotate.cpp  Rotate.h
nodes/image_io/: BatchImageRead.cpp  BatchImageRead.h  BatchImageWrite.cpp  BatchImageWrite.h  CheckerboardGenerate.cpp  CheckerboardGenerate.h  ForEachImage.cpp  ForEachImage.h  GradientGenerate.cpp  GradientGenerate.h  ImageCollector.cpp  ImageCollector.h  ImageFileRead.cpp  ImageFileRead.h  ImageFileWrite.cpp  ImageFileWrite.h  NoiseGenerate.cpp  NoiseGenerate.h  SolidColorGenerate.cpp  SolidColorGenerate.h
nodes/layout/: BorderDecoration.cpp  BorderDecoration.h  CanvasExtend.cpp  CanvasExtend.h  (+8 more)
(+123 files in other folders)
